# easyCAD

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: linux_build.yml  msbuild.yml
include/: app.hpp  camera.hpp  frame.hpp  gl_panel.hpp  gl_plane.hpp
src/: app.cpp  camera.cpp  frame.cpp  gl_panel.cpp  gl_plane.cpp  main.cpp
